--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "BOT_TOKEN": "token",
-  "SERVER_URL": "ip:port_or_link",
-  "CHANNEL_ID": "channel_ID",
-  "DIRECT_CONNECT_LINK": "DIRECT_CONNECT_LINK",
+  "BOT_TOKEN": "MTM1NTU5NjM0OTE5NzkxNDIwMw.GUKqGL.VgofmFRqS2x-EXo4Fk3RKXnUHPBCY_GWI0F1KU",
+  "SERVER_URL": "cfx.re/join/b7bjqd",
+  "CHANNEL_ID": "1341418222770978918",
+  "DIRECT_CONNECT_LINK": "https://cfx.re/join/b7bjqd",
   "updateMinutes": 1
 }
